tags sticky position mobile fix

--- a/styles/_work.scss
+++ b/styles/_work.scss
@@ -29,7 +29,7 @@
         padding-top: 10px;
         padding-bottom: 16px;
         @include mobile{
-            top: 160px;
+            top: 110px;
             max-width: 350px;
             flex-wrap: wrap;
         }
